opam-version: "2.0"
name: "mybuild"
synopsis: "Small library and utility to generate version from VCS (git)"
maintainer: "ygrek@autistici.org"
authors: "ygrek <ygrek@autistici.org>"
license: "UNLICENSE"
tags: "org:ygrek"
dev-repo: "git+https://github.com/ygrek/mybuild.git"
homepage: "https://github.com/ygrek/mybuild"
bug-reports: "https://github.com/ygrek/mybuild/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "2.0"}
  "base-unix"
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs
    "@install"
    "@doc" {with-doc}
    "@runtest" {with-test}]
]
